hphp/hack/test/typecheck/reified_generics/valid_targ_fun.php
<?hh

class C<reify T> {}

type Ta = C<(function (int, bool): string)>;
type Tc = C<(function (int, bool, float...): string)>;
